@@ -17,6 +17,9 @@ This file describes the changes to the Log for C++ library. See the CVS reposito
 	#include <log4cpp/X>
 
 	* tests/testProperties.cpp, tests/testPropertyConfig.cpp: added.
+
+	* configure.in, doc/Makefile.am, doc/html/Makefile.am: added doc/html
+	to automake.
 	
 2002-08-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* include/log4cpp/RollingFileAppender.hh: correct constness of 
